[package]
name = "yanbing-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "protocol/protocol-core",
    "protocol/protocol-modbus-tcp",
    "yanbing-proc-macro"
]
[dependencies]
protocol-core = { path = "./protocol/protocol-core" }

axum = { git = "https://gitee.com/diweiyunlian/axum.git", branch = "main", features = ["macros"] }
rand = "0.8.5"
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio", "sqlite", "chrono"] }
rusqlite = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# 日期插件
chrono = { version = "0.4.26", features = ["serde"] }
# debug日志
#env_logger="0.10.0"
#log = "0.4.19"
#conf 配置
config = "0.13.3"
serde_yaml = "0.9"
# 生成getter
derive-getters = "0.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 动态库加载
libloading = "0.8.0"
# 校验器 跟java validate类似
validator = {version="0.16.0",features = ["derive"]}
thiserror = "1.0.40"
tower = { version = "0.4", features = ["util"] }