[package]
name = "yanbing-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "protocol/protocol-core",
    "protocol/protocol-modbus-tcp",
]

[features]
modbus-tcp = ["protocol-modbus-tcp"]
default=["modbus-tcp"]
[dependencies]
protocol-core = { path = "./protocol/protocol-core" }
protocol-modbus-tcp = { path = "./protocol/protocol-modbus-tcp", optional = true }
axum = { git = "https://gitee.com/diweiyunlian/axum.git", branch = "main", features = ["macros"] }
rand = "0.8.5"
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio", "sqlite", "chrono"] }
rusqlite = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# 日期插件
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
serde_yaml = "0.9"
# 生成getter
derive-getters = "0.3.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 动态库加载
libloading = "0.8.0"
# 校验器 跟java validate类似
validator = {version="0.16.0",features = ["derive"]}
thiserror = "1.0.40"
tower = { version = "0.4", features = ["util"] }
#添加认证的依赖
jsonwebtoken = "8.3"
headers = "0.3"
once_cell="1.18"
state = "0.6"
futures="0.3"
# 依赖为啥不传递??
pharos = "0.5"
lazy_static = "1.4"
paste = "1"
