[package]
name = "yanbing-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "protocol/protocol-core",
    "protocol/protocol-modbus-tcp",
    "data-export/export-core",
    "data-export/export-xiaozhiyun",
]

[target.armv7-unknown-linux-gnueabihf]
#linker = "arm-linux-gnueabihf-gcc"

[features]
modbus-tcp = ["protocol-modbus-tcp"]
xiaozhiyun-push = ["export-xiaozhiyun"]
default=["modbus-tcp","xiaozhiyun-push"]

[dependencies]
protocol-core = { path = "./protocol/protocol-core" }
export-core = { path = "data-export/export-core" }
export-xiaozhiyun = { path = "data-export/export-xiaozhiyun",optional = true }
protocol-modbus-tcp = { path = "./protocol/protocol-modbus-tcp", optional = true }
axum = { version = "0.6.18", features = ["macros"] }
rand = "0.8.5"
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio", "sqlite", "chrono"] }
# 解决交叉编译的问题,具体查看官方文档
rusqlite = {version="0.29.0",features=["bundled"]}
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# 日期插件
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
serde_yaml = "0.9"
# 生成getter
derive-getters = "0.3.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 动态库加载
libloading = "0.8.0"
# 校验器 跟java validate类似
validator = {version="0.16.0",features = ["derive"]}
thiserror = "1.0.40"
#添加认证的依赖
jsonwebtoken = "8.3"
headers = "0.3"
once_cell="1.18"
state = "0.6"
futures="0.3"
# 依赖为啥不传递??
pharos = "0.5"
lazy_static = "1.4"
paste = "1"
# 可以做swagger的,暂时不管
#utoipa-swagger-ui = { version = "3", features = ["axum"] }
#utoipa = { version = "3", features = ["axum_extras"] }