[package]
name = "export-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol-core = { path = "../../protocol/protocol-core" }
# 日期插件
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.0-alpha.3",features=["sqlite"]}
pharos = "0.5"
tokio = { version = "1.28", features = ["full"] }
futures="0.3"
once_cell="1.18"
derive-getters = "0.3.0"
async-trait = "0.1"