[package]
name = "export-xiaozhiyun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
export-core = { path = "../export-core" }
paho-mqtt = "0.12"
tokio = { version = "1.28", features = ["rt-multi-thread"] }