[package]
name = "export-xiaozhiyun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
export-core = { path = "../export-core" }
paho-mqtt = "0.12"
tokio = { version = "1.28", features = ["rt-multi-thread"] }
# 日期插件
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
protocol-core = { path = "../../protocol/protocol-core" }