[package]
name = "protocol-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 日期插件
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.0-alpha.3",features=["sqlite"]}