[package]
name = "protocol-modbus-rtu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol-core = { path = "../protocol-core"  }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
#为啥选这个库,因为测试通过的
tokio-modbus = { version = "0.8", default-features = false, features = ["rtu-sync"] }
derive-getters = "0.3.0"
async-trait = "0.1"
thiserror = "1"
tokio-serial = "5.4.4"