[package]
name = "protocol-modbus-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol-core = { path = "../protocol-core" }
yanbing-proc-macro = { path = "../../yanbing-proc-macro" }

[lib]
name = "protocol_modbus_tcp"
crate-type = ["cdylib"]
