[package]
name = "protocol-modbus"
version = "0.1.0"
edition = "2021"

[features]
default=["modbus-tcp","modbus-rtu"]
modbus-tcp = ["tokio-modbus/tcp"]
modbus-rtu = ["tokio-modbus/rtu","tokio-serial"]

[dependencies]
protocol-core = { path = "../protocol-core"  }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
#为啥选这个库,因为测试通过的
tokio-modbus = { version = "0.8", default-features = false, features = ["rtu","tcp"] ,optional = true }

derive-getters = "0.3.0"
async-trait = "0.1"
thiserror = "1"
[dependencies.tokio-serial]
version = "5.4.4"
optional = true